<resources>
    <string name="app_name">FlyerMath</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>

    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>

    <string name="start_pounds_text">Initial Weight</string>
    <string name="end_pounds_text">Final Weight</string>
    <string name="all_pounds_hint">enter pounds</string>
    <string name="all_time_hint">Hit button to enter time</string>

</resources>