<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/visual_switch"
        android:layout_width="121dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/start_pounds_text"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber1"
        app:layout_constraintTop_toTopOf="@+id/visual_switch" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/all_pounds_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/start_time_text"
        app:layout_constraintEnd_toStartOf="@+id/editTextTime1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/editTextTime1"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/all_time_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1"
        tools:text="@tools:sample/date/hhmm"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="89dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/start_time_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visual_switch"
        android:layout_marginRight="28dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/end_time_text"
        app:layout_constraintEnd_toStartOf="@+id/editTextTime2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/all_pounds_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/end_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime1"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/end_pounds_text"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="8"
        android:hint="@string/all_time_hint"
        android:inputType="none"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@+id/end_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:text="@tools:sample/date/hhmm"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="89dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/end_time_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        android:layout_marginRight="28dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="365dp"
        android:layout_height="15dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2"
        android:layout_marginRight="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>